[gd_scene load_steps=4 format=3 uid="uid://b2crpiul8jrni"]

[ext_resource type="Script" uid="uid://c7wlrhnukbq1j" path="res://gui_elements/player_select_screen.gd" id="1_wnmye"]
[ext_resource type="StyleBox" uid="uid://db1765yg65ypq" path="res://theme/button_default.tres" id="2_mpwbx"]
[ext_resource type="PackedScene" uid="uid://cs16bg3i2gt8h" path="res://assets/cloud_background.tscn" id="3_033st"]

[node name="Main" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wnmye")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 1197.0
offset_bottom = 802.0

[node name="row" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="col1" type="HBoxContainer" parent="VBoxContainer/row"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="row1" type="HBoxContainer" parent="VBoxContainer/row/col1"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/row/col1/row1"]
layout_mode = 2

[node name="Label1" type="Label" parent="VBoxContainer/row/col1/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player 1
"
horizontal_alignment = 1

[node name="PressLabel1" type="Label" parent="VBoxContainer/row/col1/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_mpwbx")
text = "Press L1 to join"
horizontal_alignment = 1

[node name="ProgressBar1" type="ProgressBar" parent="VBoxContainer/row/col1/row1/VBoxContainer"]
layout_mode = 2

[node name="col2" type="HBoxContainer" parent="VBoxContainer/row"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="row1" type="HBoxContainer" parent="VBoxContainer/row/col2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/row/col2/row1"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/row/col2/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player 2"
horizontal_alignment = 1

[node name="PressLabel2" type="Label" parent="VBoxContainer/row/col2/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_mpwbx")
text = "Press R1 to join"
horizontal_alignment = 1

[node name="ProgressBar2" type="ProgressBar" parent="VBoxContainer/row/col2/row1/VBoxContainer"]
layout_mode = 2

[node name="row2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="col1" type="HBoxContainer" parent="VBoxContainer/row2"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="row1" type="HBoxContainer" parent="VBoxContainer/row2/col1"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/row2/col1/row1"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/row2/col1/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player 3
"
horizontal_alignment = 1

[node name="PressLabel3" type="Label" parent="VBoxContainer/row2/col1/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_mpwbx")
text = "Press L1 to join"
horizontal_alignment = 1

[node name="ProgressBar3" type="ProgressBar" parent="VBoxContainer/row2/col1/row1/VBoxContainer"]
layout_mode = 2

[node name="col2" type="HBoxContainer" parent="VBoxContainer/row2"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="row1" type="HBoxContainer" parent="VBoxContainer/row2/col2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/row2/col2/row1"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/row2/col2/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player 4
"
horizontal_alignment = 1

[node name="PressLabel4" type="Label" parent="VBoxContainer/row2/col2/row1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_mpwbx")
text = "Press R1 to join"
horizontal_alignment = 1

[node name="ProgressBar4" type="ProgressBar" parent="VBoxContainer/row2/col2/row1/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" parent="." instance=ExtResource("3_033st")]
